# Longa-Brasil

./: .gitignore  setup.sh
api-express/: pyproject.toml
api-express/src/: server.js
frontend-react/: .gitignore
frontend-react/src/: App.css  App.jsx  index.css
frontend-react/src/components/AdBanner/: AdBanner.jsx  Banner.css
frontend-react/src/components/Carousel/: Carousel.css  Carousel.jsx
frontend-react/src/components/CookieConsent/: CookieConsent.css  CookieConsent.jsx
frontend-react/src/components/Header/: Header.css  Header.jsx
frontend-react/src/components/MovieCard/: MovieCard.css  MovieCard.jsx
frontend-react/src/components/MovieGrid/: MovieGrid.css  MovieGrid.jsx
scraper-python/: .gitignore  main.py  pyproject.toml  pytest.ini  requirements.txt
scraper-python/.github/workflows/:  playwright.yml  playwright.yml  test.yml
scraper-python/src/core/: config.py
scraper-python/src/scraping/themoviedb/: tmdb.py
scraper-python/src/utils/: extract_domain_name.py  test_ping.py
