[project]
name = "backend"
version = "1.0.0"
description = """
Longa Brasil - A maior plataforma de cinema brasileiro!

API e site dedicados ao cinema nacional, com catálogo completo de filmes, 
diretores, elenco e informações detalhadas. Coletamos dados automaticamente 
de múltiplas fontes para oferecer a experiência mais rica sobre produções 
cinematográficas brasileiras.
"""
authors = [
    {name = "Gilderlan Silva | Github: Gilderlan0101"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
