[project]
name = "longa-brasil-scraper"
version = "1.0.0"
description = """
Módulo de raspagem de dados para o Longa Brasil.
Coleta informações sobre filmes brasileiros de múltiplas fontes.
"""
authors = [
    {name = "Gilderlan Silva | GitHub: Gilderlan0101"}
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
scrape-movies = "scraper.cli:scrape_movies"
scrape-people = "scraper.cli:scrape_people"
run-worker = "scraper.worker:main"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scrape = "scraper.cli:main"
